--- a/src/main/resources/templates/category/category_not_found.html
+++ b/src/main/resources/templates/category/category_not_found.html
@@ -4,15 +4,15 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8" />
-<title th:text="#{mainpage.title}"></title>
+<title th:text="#{category.notfound.page_title}"></title>
 <link rel="stylesheet" th:href="@{/static/css/common.css}" />
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
-    <h1 th:text="#{greeting}"></h1>
-    <p><a th:href="@{/category}">Categories</a></p>
-     <section th:insert="~{@{categorytreefragment} :: category}" th:with="maincategories=${categories}"></section>
-     
+    
+    <h1 th:text="#{category.notfound.page_title}"></h1>
+    <a th:text="#{category.all}" th:href="@{/category}">ALL CATEGORIES</a>
+    
 	<th:block th:insert="~{pagefragments.html :: footer}"> </th:block>
 </body>
 </html>
