--- a/src/main/resources/templates/category/category_view.html
+++ b/src/main/resources/templates/category/category_view.html
@@ -4,15 +4,19 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8" />
-<title th:text="#{mainpage.title}"></title>
+<title th:text="${category.name}"></title>
 <link rel="stylesheet" th:href="@{/static/css/common.css}" />
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
-    <h1 th:text="#{greeting}"></h1>
-    <p><a th:href="@{/category}">Categories</a></p>
-     <section th:insert="~{@{categorytreefragment} :: category}" th:with="maincategories=${categories}"></section>
-     
+    <h1 th:text="${category.name}"></h1>
+
+    <div><th:block th:text="${category.description}" /> </div>
+
+    <a th:href="@{/category/add}" th:text="#{category.add}"></a>
+    <div th:each="category : ${categories}">
+         <label th:text="${category.name}">CATEGORY NAME</label><br/>
+     </div>
 	<th:block th:insert="~{pagefragments.html :: footer}"> </th:block>
 </body>
 </html>
