--- a/src/main/resources/templates/category/category_home.html
+++ b/src/main/resources/templates/category/category_home.html
@@ -3,9 +3,8 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8" />
 <title th:text="#{category.page_title}"></title>
-<link rel="stylesheet" th:href="@{/static/css/common.css}" />
+<th:block th:insert="~{pagefragments.html :: pagehead}"> </th:block>
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
