--- a/src/main/resources/templates/pagefragments.html
+++ b/src/main/resources/templates/pagefragments.html
@@ -19,7 +19,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>
+				<td style="padding:10px;">
+				
     </th:block>
 				<!-- content -->
     <th:block th:fragment="footer">
