--- a/src/main/resources/templates/course/course_view.html
+++ b/src/main/resources/templates/course/course_view.html
@@ -16,11 +16,17 @@
     </span>
     </p>
     
-    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{edit}">EDIT COURSE</a></p>
+    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
     
     <h1 th:text="${course.name}"></h1>
 
     <div><th:block th:text="${course.description}" /> </div>
+    
+    <a th:href="@{/unit/add/{courseId}(courseId=${course.id})}" th:text="#{unit.create}"></a>
+    
+    <p th:each="unit : ${chapters}">
+    <a th:href="@{/unit/{id}(id=${unit.id})}" th:text="${unit.name}"></a>
+    </p>
 
 	<th:block th:insert="~{pagefragments.html :: footer}"> </th:block>
 </body>
