Managing test questions

--- a/src/main/resources/templates/course/course_add.html
+++ b/src/main/resources/templates/course/course_add.html
@@ -24,7 +24,7 @@
 			</tr>
             <tr>
                 <td><label th:text="#{course.description_optional}"></label></td>
-                <td><input type="text" id="course_description" name="course_description" th:field="*{description}" /></td>
+                <td><textarea id="course_description" name="course_description" th:field="*{description}"></textarea></td>
             </tr>
 			<tr>
 				<td><label th:text="#{category.parent_category}"></label></td>
