--- a/src/main/resources/templates/lecture/lecture_add.html
+++ b/src/main/resources/templates/lecture/lecture_add.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td><label th:text="#{lecture.description_optional}" for="lecture_description"></label></td>
-                <td><input type="text" id="lecture_description" name="lecture_description" th:field="*{description}" /></td>
+                <td><textarea id="lecture_description" name="lecture_description" th:field="*{description}"></textarea></td>
             </tr>
             <tr>
                 <td colspan="2">
