--- a/src/main/resources/templates/category/category_view.html
+++ b/src/main/resources/templates/category/category_view.html
@@ -20,7 +20,17 @@
 
     <div><th:block th:text="${category.description}" /> </div>
 
-    <a th:href="@{/category/add}" th:text="#{category.add}"></a>
+    <table>
+    <tr>
+    <td>
+        <a th:href="@{/category/add}" th:text="#{category.add}"></a>
+    </td>
+    <td>
+        <a th:href="@{/category/edit/{id}(id=${category.id})}" th:text="#{category.edit}"></a>
+    </td>
+    </tr>
+    </table>
+    
     
     <!-- existing categories -->
     
@@ -28,7 +38,7 @@
     
     <!-- courses -->
     <a th:href="@{/course/add/{categoryId}(categoryId=${category.id})}" th:text="#{course.create}">ADD COURSE</a>
-    <h2 th:if="${courses != null}" th:text="#{category.courses_in_this_category}"></h2>
+    <h2 th:if="${courses != null && courses.size() > 0}" th:text="#{category.courses_in_this_category}"></h2>
     
     <p th:each="c : ${courses}"><a th:href="@{/course/{id}(id=${c.id})}" th:text="${c.name}"></a></p>
     
