--- a/src/main/resources/templates/lecture/lecture_view.html
+++ b/src/main/resources/templates/lecture/lecture_view.html
@@ -15,22 +15,36 @@
         <a th:href="@{/category/{id}(id=${cp.id})}" th:text="${cp.name}">CATEGORY NAME</a> /
     </span>
     </p>
-    
+    <h1><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h1>
+<table>
+<tr>
+    <td>
     <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
-    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
-    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
-    
-    <p><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></p>
+    </td>
+    <td>
     <p><a th:href="@{/unit/{id}(id=${chapter.id})}" th:text="#{unit.create}"></a></p>
+    </td>
+    <td>
+    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
+    </td>
+    <td>
+    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
+    </td>
+    <td>
     <p><a th:href="@{/lecture/edit/{id}(id=${lecture.id})}" th:text="#{lecture.edit}"></a></p>
-    
+    </td>
+    <td>
     <th:block th:if="${lecture.lectureTest == null}">
         <p><a th:href="@{/test/add/{id}(id=${lecture.id})}" th:text="#{lecture.add_test}">ADD TEST</a></p>
     </th:block>
     <th:block th:if="${lecture.lectureTest != null}">
-    
         <p><a th:href="@{/test/edit/{id}(id=${lecture.lectureTest.id})}" th:text="#{lecture.edit_test}">EDIT TEST</a></p>
     </th:block>
+    </td>
+</tr>
+</table>
+    
+    
     
     <h2 th:text="${chapter.name}"></h2>
     
