--- a/src/main/resources/templates/pagefragments.html
+++ b/src/main/resources/templates/pagefragments.html
@@ -13,7 +13,7 @@
 				<td><!-- logo -->
 					<table class="logobox">
 						<tr>
-							<td>Volumen LMS</td>
+							<td><a th:href="@{/}">Volumen LMS</a></td>
 						</tr>
 					</table>
 				</td>
