--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -32,6 +32,34 @@ body {
 	color: blue;
 }
 
+#page-management-menu {
+	width:200px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: darkgray;
+	padding: 3px;
+}
 
+.run-test-container {
+	width: 100%;
+	border-style: solid;
+    border-width: 1px;
+    border-color: darkgray;
+    padding: 3px;
+}
 
+.true-answer-cell {
+	text-align:center;
+	white-space:nowrap;
+	min-width:50px;
+	height:50px;
+	background: rgb(105, 231, 57);
+}
 
+.false-answer-cell {
+	text-align:center;
+	white-space:nowrap;
+    min-width:50px;
+    height:50px;
+    background: #f6b1b1;
+}
