--- a/src/main/resources/templates/lecture/lecture_view.html
+++ b/src/main/resources/templates/lecture/lecture_view.html
@@ -10,42 +10,42 @@
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
     <table style="width:100%; height:100%">
     <tr>
-    <td valign="top">
-    <p>
-    <a th:href="@{/category/}" th:text="#{category.all}">ALL CATEGORIES</a> /
-    <span th:each="cp : ${categoryPath}">
-        <a th:href="@{/category/{id}(id=${cp.id})}" th:text="${cp.name}">CATEGORY NAME</a> /
-    </span>
-    </p>
-    <h1><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h1>
-    
-    <h2 th:text="${chapter.name}"></h2>
-    
-    <h3 th:text="${lecture.name}"></h3>
-
-    <div><th:block th:utext="${lecture.description}" /> </div>
-    
-    <div><th:block th:utext="${lectureContent}" /> </div>
-    
-    <th:block th:if="${lecture.lectureTest != null}">
-        <p><a th:href="@{/runtest/lecture/{lectureId}(lectureId=${lecture.id})}" th:text="#{test.run}">RUN LECTURE TEST</a></p>
-    </th:block>
+    <td valign="top" style="width:90%;">
+	    <p>
+	    <a th:href="@{/category/}" th:text="#{category.all}">ALL CATEGORIES</a> /
+	    <span th:each="cp : ${categoryPath}">
+	        <a th:href="@{/category/{id}(id=${cp.id})}" th:text="${cp.name}">CATEGORY NAME</a> /
+	    </span>
+	    </p>
+	    <h1><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h1>
+	    
+	    <h2 th:text="${chapter.name}"></h2>
+	    
+	    <h3 th:text="${lecture.name}"></h3>
+	
+	    <div><th:block th:utext="${lecture.description}" /> </div>
+	    
+	    <div><th:block th:utext="${lectureContent}" /> </div>
+	    
+	    <th:block th:if="${lecture.lectureTest != null}">
+	        <p><a th:href="@{/runtest/lecture/{lectureId}(lectureId=${lecture.id})}" th:text="#{test.run}">RUN LECTURE TEST</a></p>
+	    </th:block>
     </td>
     <td valign="top">
-    <div id="page-management-menu">
-    <p style="white-space:nowrap;"><b th:text="#{header.content_management}"></b></p>
-    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
-    <p><a th:href="@{/unit/{id}(id=${chapter.id})}" th:text="#{unit.create}"></a></p>
-    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
-    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
-    <p><a th:href="@{/lecture/edit/{id}(id=${lecture.id})}" th:text="#{lecture.edit}"></a></p>
-    <th:block th:if="${lecture.lectureTest == null}">
-        <p><a th:href="@{/test/add/{id}(id=${lecture.id})}" th:text="#{lecture.add_test}">ADD TEST</a></p>
-    </th:block>
-    <th:block th:if="${lecture.lectureTest != null}">
-        <p><a th:href="@{/test/edit/{id}(id=${lecture.lectureTest.id})}" th:text="#{lecture.edit_test}">EDIT TEST</a></p>
-    </th:block>
-    </div>
+	    <div id="page-management-menu">
+	    <p style="white-space:nowrap;"><b th:text="#{header.content_management}"></b></p>
+	    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
+	    <p><a th:href="@{/unit/{id}(id=${chapter.id})}" th:text="#{unit.create}"></a></p>
+	    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
+	    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
+	    <p><a th:href="@{/lecture/edit/{id}(id=${lecture.id})}" th:text="#{lecture.edit}"></a></p>
+	    <th:block th:if="${lecture.lectureTest == null}">
+	        <p><a th:href="@{/test/add/{id}(id=${lecture.id})}" th:text="#{lecture.add_test}">ADD TEST</a></p>
+	    </th:block>
+	    <th:block th:if="${lecture.lectureTest != null}">
+	        <p><a th:href="@{/test/edit/{id}(id=${lecture.lectureTest.id})}" th:text="#{lecture.edit_test}">EDIT TEST</a></p>
+	    </th:block>
+	    </div>
     </td>
     </tr>
     </table>
