--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -14,6 +14,11 @@ body {
     height: 100%;
 }
 
+.mainframe td {
+	padding: 0px;
+	margin: 0px;
+}
+
 .logobox {
 	background-color: rgb(205, 171, 143);
 	height: 50px;
