--- a/src/main/resources/templates/pagefragments.html
+++ b/src/main/resources/templates/pagefragments.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<th:block th:fragment="header">
-		<table class="mainframe" cellpadding="0" cellspacing="0">
+		<table class="mainframe">
 			<tr>
 				<td><!-- logo -->
 					<table class="logobox">
