--- a/src/main/resources/templates/course/course_view.html
+++ b/src/main/resources/templates/course/course_view.html
@@ -8,38 +8,39 @@
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
-    
-<table>
+<table style="width:100%; height: 100%;">
 <tr>
-    <td>
-    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
-    </td>
-    <td>
-    <p>
-    <a th:href="@{/unit/add/{courseId}(courseId=${course.id})}" th:text="#{unit.create}"></a>
-    </p>
+	<td valign="top" style="width:90%;">
+	<!-- CONTENT -->
+	    <h1 th:text="${course.name}"></h1>
+
+        <div><th:block th:utext="${course.description}" /> </div>
+    
+	    <th:block th:each="unit : ${chapters}">
+	        <h2>
+	            <a th:href="@{/unit/{id}(id=${unit.id})}" th:text="${unit.name}">UNIT</a>
+	        </h2>
+	        <p th:if="unit.description != null" th:utext="${unit.description}"></p>
+	        <ul>
+	        <th:block th:each="lec : ${unit.lectures}">
+	            <h3>
+	                <a th:href="@{/lecture/{id}(id=${lec.id})}" th:text="${lec.name}">LECTURE</a>
+	            </h3>
+	            <p th:utext="${lec.description}"></p>
+	        </th:block>
+	        </ul>
+	    </th:block>
+	</td>
+	<td valign="top">
+        <div id="page-management-menu">
+        <p style="white-space:nowrap;"><b th:text="#{header.content_management}"></b></p>
+        <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
+        <p><a th:href="@{/unit/add/{courseId}(courseId=${course.id})}" th:text="#{unit.create}"></a></p>
+        </div>
     </td>
 </tr>
-</table>
-    
-    <h1 th:text="${course.name}"></h1>
+</table>    
 
-    <div><th:block th:utext="${course.description}" /> </div>
-    
-    <th:block th:each="unit : ${chapters}">
-	    <h2>
-	        <a th:href="@{/unit/{id}(id=${unit.id})}" th:text="${unit.name}">UNIT</a>
-	    </h2>
-	    <p th:if="unit.description != null" th:utext="${unit.description}"></p>
-	    <ul>
-	    <th:block th:each="lec : ${unit.lectures}">
-	        <h3>
-	            <a th:href="@{/lecture/{id}(id=${lec.id})}" th:text="${lec.name}">LECTURE</a>
-	        </h3>
-	        <p th:utext="${lec.description}"></p>
-	    </th:block>
-	    </ul>
-    </th:block>
 	<th:block th:insert="~{pagefragments.html :: footer}"> </th:block>
 </body>
 </html>
